# Anifusion-Info-Service

./: .gitignore  pyproject.toml  requirements.txt
src/: main.py  test.py
src/api/: routers.py
src/api/v1/: dependencies.py
src/api/v1/endpoints/: country.py  genre.py  movie.py  season.py  series.py  studio.py
src/core/services/: country_service.py  genre_service.py  movie_service.py  season_service.py  studio_service.py
src/core/services/abstract/: abstract_service.py
src/db/: db.py
src/db/models/: models.py
src/repositories/: country_repository.py  genre_repository.py  movie_repository.py  season_repository.py  serie_repository.py  studio_repository.py
src/repositories/interval/: interval_for_movie.py
src/schemas/: country_schemas.py  genre_schemas.py  movie_schemas.py  season_schemas.py  serie_schemas.py  studio_schemas.py
src/utils/: config.py  repository.py
