[tool.poetry]
name = "anifusion-info-service"
version = "0.1.0"
description = "This is movie info service"
authors = ["Al.Meshch <gvozdea1243@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.2"
pydantic = "^2.9.2"
sqlalchemy = "^2.0.36"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
